syntax = "proto3";

package metrics;

option go_package = "metrics/proto";

message Metric {
  string ID = 1;
  string MType = 2;
  double value = 3;
  int64 delta = 4;
}

message UpdateMetricsRequest {
  repeated Metric metrics = 1;
}

message Empty {}

message StartSessionRequest {
  bytes  key = 1;
}



service Metrics {
  rpc StartSession(StartSessionRequest) returns (Empty);
  rpc UpdateMetrics(UpdateMetricsRequest) returns (Empty);
}